# smtcaml

./: .gitmodules  README.md  dune-project  dune-workspace  smtcaml.opam
.github/workflows/: build.yml
bindings/: boolector.ml  boolector_stubs.cpp  cvc5.ml  cvc5_stubs.cpp  dune
bindings/test/: dune  test_bindings.ml
cppcaml/: cppcaml.cpp  dune
cppcaml/include/: cppcaml.h
cppcaml/lib/: cppcaml_lib.ml  dune
src/: backend_bitwuzla.ml  backend_boolector.ml  backend_cvc5.ml  backend_cvc5.mli  dune  interface_definitions.ml  smtcaml_intf.ml
src/backends/bitwuzla/: backend_bitwuzla.ml  backend_bitwuzla.mli  dune
src/backends/boolector/: backend_boolector.ml  backend_boolector.mli  dune
src/backends/cvc5/: backend_cvc5.ml  backend_cvc5.mli  dune
src/backends/z3/: backend_z3.ml  backend_z3.mli  dune
src/intf/: dune  interface_definitions.ml  smtcaml_intf.ml  smtcaml_intf_internal.ml
src/utils/: add_sub_over_under_flow.ml  dune  mux.ml  popcount.ml  power_of_two.ml  set_ops.ml
test/advanced/: dune  smtcaml_test_advanced.ml
test/basic_api/: bitvector.ml  dune  plain.ml  uf.ml
test/utils/: add_sub_over_under_flow.ml  dune  mux.ml
