(executable
  (name smtcaml_test_advanced)
  (libraries
   core
   core_unix
   core_unix.command_unix
   ppxlib
   core_kernel.nonempty_list
   smtcaml_bindings
   smtcaml_intf
   smtcaml_utils
   backend_bitwuzla
   backend_z3
   backend_cvc5
   backend_boolector)
  (preprocess (pps ppx_jane))
  )
